# northstar

./: .gitignore  .markdownlint.yml  .markdownlintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Gemfile  HACKING.md  LICENSE.md  MINIJAIL.md  Makefile.toml  README.md  SECURITY.md  bootstrap.rb  check_conf.sh  deny.toml  north.toml  northstar.rc  northstar.toml  print.html  rakefile.rb  release.sh  rustfmt.toml  searchindex.js  searchindex.json  tooling.rb  tooling_test.rb
cargo-npk/: Cargo.toml
cargo-npk/src/: cli.rs  lib.rs  main.rs  metadata.rs
dcon/: Cargo.toml
dcon/src/: main.rs
downloader/: Cargo.toml  README.md  build.rs
downloader/src/: download.rs  main.rs
examples/console/: Cargo.toml  manifest.yaml
examples/console/src/: main.rs
examples/cpueater/: Cargo.toml  manifest.yaml
examples/cpueater/src/: main.rs
examples/custom/: Cargo.toml  manifest.yaml
examples/custom/src/: main.rs
examples/redis-client/: Cargo.toml  manifest.yaml
examples/redis-client/src/: main.rs
examples/redis-server/: Cargo.toml  manifest.yaml
examples/redis-server/src/: main.rs
examples/sockets/: Cargo.toml  manifest.yaml
examples/sockets/src/: main.rs
examples/test-container/: Cargo.toml  manifest.yaml
examples/test-container/src/: inspect.rs  main.rs  sockets.rs
main/: Cargo.toml
main/src/: logger.rs  main.rs
north/: Cargo.toml  build.rs
north/src/: api.rs  config.rs  console.rs  keys.rs  lib.rs  main.rs  manifest.rs  process.rs  runtime.rs  settings.rs  state.rs  update.rs
north/src/cgroups/: mock.rs  mod.rs  target.rs
north/src/container/: hashes.rs  linux.rs  mod.rs  osx.rs
north/src/linux/: cgroups.rs  device_mapper.rs  loopdev.rs  mod.rs  mount.rs
north/src/npk/: linux.rs  mock.rs  mod.rs
north/src/runtime/: cgroups.rs  config.rs  console.rs  device_mapper.rs  error.rs  inotify.rs  keys.rs  loopdev.rs  minijail.rs  mod.rs  mount.rs  process.rs  state.rs
north/src/runtime/linux/: cgroups.rs  device_mapper.rs  inotify.rs  loopdev.rs  minijail.rs  mod.rs  mount.rs  verity.rs
north/src/runtime/npk/: linux.rs  mock.rs  mod.rs  verity.rs
north/src/runtime/process/: minijail.rs  mod.rs  raw.rs
north_common/: Cargo.toml  README.md
north_common/src/: api.rs  lib.rs  manifest.rs
north_tests/: Cargo.toml  build_test_container.sh
north_tests/src/: config.rs  lib.rs  logger.rs  macros.rs  process_assert.rs  runtime.rs  test_container.rs  util.rs
north_tests/test_container/: manifest.yaml
north_tests/test_resource/: manifest.yaml
north_tests/tests/: integration_tests.rs
northstar/: Cargo.toml  build.rs
northstar-client/: Cargo.toml
northstar-client/src/: error.rs  lib.rs
northstar-nstar/: Cargo.toml
northstar-nstar/src/: completion.rs  main.rs  pretty.rs  seccomp.rs  trace.rs
northstar-runtime/: Cargo.toml  build.rs
northstar-runtime/src/: lib.rs  rexec.rs
northstar-runtime/src/api/: codec.rs  mod.rs  model.rs
northstar-runtime/src/api/client/: error.rs  mod.rs
northstar-runtime/src/common/: container.rs  mod.rs  name.rs  non_nul_string.rs  version.rs
northstar-runtime/src/npk/: dm_verity.rs  mod.rs  npk.rs  tests.rs
northstar-runtime/src/runtime/: cgroups.rs  config.rs  console.rs  debug.rs  env.rs  error.rs  events.rs  exit_status.rs  io.rs  key.rs  metrics.rs  mod.rs  mount.rs  persistence.rs  repository.rs  runtime.rs  sockets.rs  state.rs  token.rs
northstar-runtime/src/seccomp/: bpf.rs  mod.rs  types.rs
northstar-schema/: Cargo.toml
northstar-schema/src/: main.rs
northstar-seccomp/: Cargo.toml  README.md
northstar-seccomp/res/: test_strace_data.txt
northstar-seccomp/src/: main.rs
northstar-seccomp/tests/: tests.rs
northstar-sextant/: Cargo.toml  README.md
northstar-sextant/src/: inspect.rs  main.rs  pack.rs
northstar-stress/: Cargo.toml  README.md
northstar-stress/src/: main.rs
northstar-tests/: Cargo.toml  build.rs
northstar-tests/northstar-tests-derive/: Cargo.toml
northstar-tests/northstar-tests-derive/src/: lib.rs
northstar-tests/src/: containers.rs  lib.rs  logger.rs  macros.rs  npk.rs  runtime.rs
northstar-tests/test-container/: Cargo.toml  manifest.yaml
northstar-tests/test-container/src/: main.rs
northstar-tests/test-resource/: manifest.yaml
northstar-tests/tests/: console.rs  examples.rs  npk.rs  tests.rs
northstar/hello_world/: Cargo.toml  manifest.yaml
northstar/src/: api.rs  lib.rs  logger.rs  main.rs  util.rs
northstar/src/api/: client.rs  codec.rs  container.rs  mod.rs  model.rs
northstar/src/api/client/: mod.rs
northstar/src/common/: container.rs  mod.rs  name.rs  non_nul_string.rs  non_null_string.rs  version.rs
northstar/src/npk/: console.rs  dm_verity.rs  manifest.rs  mod.rs  npk.rs
northstar/src/runtime/: cgroups.rs  config.rs  console.rs  container.rs  container_key.rs  containerdb.rs  debug.rs  device_mapper.rs  error.rs  io.rs  island.rs  key.rs  loopdev.rs  minijail.rs  mod.rs  mount.rs  pipe.rs  process.rs  process_debug.rs  repository.rs  state.rs  stats.rs  token.rs
northstar/src/seccomp/: bpf.rs  mod.rs  types.rs
northstar_tests/: Cargo.toml  build.rs
northstar_tests/netns/: README.txt  netns_regress.sh
northstar_tests/src/: containers.rs  lib.rs  logger.rs  macros.rs  process_assert.rs  runtime.rs  test_container.rs
northstar_tests/test_container/: Cargo.toml  manifest.yaml
northstar_tests/test_container/src/: main.rs
northstar_tests/test_resource/: manifest.yaml
northstar_tests/tests/: integration_tests.rs  tests.rs
npk/: Cargo.toml
npk/src/: archive.rs  dm_verity.rs  lib.rs  manifest.rs  npk.rs  oci.rs
npk/tests/: npk.rs
nstar/: Cargo.toml
nstar/src/: codec.rs  commands.rs  communication.rs  main.rs  pretty.rs  readline.rs  terminal.rs
sextant/: Cargo.toml  pack.html
sextant/src/: dm_verity.rs  inspect.rs  lib.rs  main.rs  npk.rs
sextant/tests/: npk.rs
stress/: Cargo.toml
stress/src/: main.rs
tests/: Cargo.toml  _build.rs  build_test_container.sh
tests/src/: lib.rs  runtime.rs  util.rs
tests/test_container/: Cargo.toml  manifest.yaml
tests/test_container/src/: main.rs
(+384 files in other folders)
