[workspace]
members = [
    "examples/console",
    "examples/cpueater",
    "examples/crashing",
    "examples/ferris",
    "examples/hello-resource",
    "examples/hello-world",
    "examples/inspect",
    "examples/memeater",
    "examples/persistence",
    "examples/redis",
    "examples/redis-client",
    "examples/seccomp",
    "examples/token-client",
    "examples/token-server",
    "northstar",
    "northstar-client",
    "northstar-nstar",
    "northstar-runtime",
    "northstar-sextant",
    "northstar-stress",
    "northstar-tests",
    "northstar-tests/northstar-tests-derive",
    "northstar-tests/test-container",
]
