[workspace]
members = [
    "cargo-npk",
    "examples/console",
    "examples/cpueater",
    "examples/crashing",
    "examples/ferris",
    "examples/hello-resource",
    "examples/hello-world",
    "examples/inspect",
    "examples/memeater",
    "examples/persistence",
    "examples/redis-client",
    "examples/redis-server",
    "examples/seccomp",
    "examples/test-container",
    "examples/token-client",
    "examples/token-server",
    "northstar",
    "northstar-client",
    "northstar-nstar",
    "northstar-runtime",
    "northstar-sextant",
    "northstar-stress",
    "northstar-tests",
    "northstar-tests/northstar-tests-derive",
]
