[workspace.package]
version = "0.9.0"
authors = ["ESRLabs"]
description = "Northstar is an container runtime for Linux targetting embedded systems"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/esrlabs/northstar"
rust-version = "1.65.0"

[workspace]
members = [
  "cargo-npk",
  "examples/console",
  "examples/cpueater",
  "examples/crashing",
  "examples/custom",
  "examples/ferris",
  "examples/hello-resource",
  "examples/hello-world",
  "examples/inspect",
  "examples/memeater",
  "examples/persistence",
  "examples/redis-client",
  "examples/redis-server",
  "examples/seccomp",
  "examples/sockets",
  "examples/test-container",
  "examples/token-client",
  "examples/token-server",
  "northstar",
  "northstar-client",
  "northstar-nstar",
  "northstar-runtime",
  "northstar-sextant",
  "northstar-stress",
  "northstar-tests",
  "northstar-tests/northstar-tests-derive",
]
resolver = "2"
