[package]
name = "cargo-npk"
version = "0.7.2-pre"
edition = "2021"
license = "Apache-2.0"
description = "Northstar is an container runtime for Linux targetting embedded systems"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"
rust-version = "1.63.0"

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
cargo-subcommand = { version = "0.11.0", features = ["clap"] }
cargo_metadata = "0.15.3"
clap = { version = "4.2.7", features = ["derive"] }
human_bytes = "0.4.2"
humantime = "2.1.0"
northstar-runtime = { version = "^0.7.2-pre", path = "../northstar-runtime", features = ["npk"] }
serde = { version = "1.0.159", features = ["derive"] }
tempfile = "3.5.0"
termcolor = "1.2.0"
