[package]
name = "cargo-npk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
cargo-subcommand = { version = "0.12.0", features = ["clap"] }
cargo_metadata = "0.15.3"
clap = { version = "4.4.18", features = ["derive"] }
human_bytes = "0.4.3"
humantime = "2.1.0"
northstar-runtime = { version = "^0.9.2-pre", path = "../northstar-runtime", features = ["npk"] }
serde = { version = "1.0.164", features = ["derive"] }
tempfile = "3.8.1"
termcolor = "1.4.1"
