[package]
name = "downloader"
version = "0.1.0"
authors = ["Daniel d'Andrada <daniel.dandrada@esrlabs.com>, Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.28"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
chrono = "0.4"
env_logger = "0.7"
env_proxy = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
north_common = { path = "../north_common" }
pgp = "0.5.2"
regex = "1.3.6"
reqwest = { version = "0.10.4", features = ["blocking", "gzip"], default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json = "1.0.51"
structopt = "0.3.12"
# sha2 = { git = "https://github.com/flxo/hashes.git", features = [ "asm" ], optional = true }
url = "2.1.1"

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
vergen = "3.1.0"
