[package]
name = "downloader"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
chrono = "0.4"
env_logger = "0.7"
env_proxy = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
north_common = { path = "../north_common" }
pgp = "0.6.0"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["blocking", "gzip"], default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.56"
structopt = "0.3.15"
url = "2.1.1"

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
vergen = "3.1.0"
