[package]
name = "main"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
default-run = "northstar"

[[bin]]
name = "northstar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
log = "0.4.14"
nix = "0.23.0"
northstar = { path = "../northstar", features = ["runtime"] }
proc-mounts = "0.2.4"
structopt = "0.3.25"
tokio = { version = "1.12.0", features = ["rt", "macros"] }
toml = "0.5.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
android-logd-logger = "0.2.2"

[features]
default = []
