[package]
name = "main"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
default-run = "northstar"
license = "Apache-2.0"

[[bin]]
name = "northstar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.54"
clap = { version = "3.1.0", features = ["derive"] }
log = "0.4.14"
nix = "0.23.0"
northstar = { path = "../northstar", features = ["runtime"] }
tokio = { version = "1.17.0", features = ["rt", "macros", "signal"] }
toml = "0.5.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
android-logd-logger = "0.2.2"
