[package]
name = "north"
version = "0.2.0"
authors = ["ESRLabs"]
edition = "2018"
build = "build.rs"
default-run = "north"
license-file = "LICENSE.md"

[[bin]]
name = "north"

[lib]
name = "north"

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
base64 = "0.12.3"
bitflags = "1.2.1"
byteorder = "1.3.4"
ed25519-dalek = "1.0.0-pre.4"
floating-duration = "0.1.2"
futures = { version = "0.3.5", features = ["std", "async-await"], default-features = false }
hex = "0.4.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2.71"
log = "0.4.8"
logd-logger = { git = "https://github.com/flxo/logd-logger.git" }
minijail = { path  = "../minijail/minijail" }
nix = "0.17.0"
regex = "1.3.9"
semver = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.13"
sha2 = "0.9.1"
stop-token = "0.1.2"
structopt = "0.3.15"
structure = "0.1.2"
tempfile = "3.1.0"
thiserror = "1.0.20"
toml = "0.5.6"
url = "2.1.1"
uuid = { version = "0.8.1", features = [ "v4"] }
zip = "0.5.6"

[features]
default = ["runtime"]
api = []
runtime = []

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
proc-mounts = "0.2.4"
procinfo = "0.4.2"

[build-dependencies]
vergen = "3.1.0"
