[package]
name = "north"
version = "0.6.0"
authors = ["ESRLabs"]
edition = "2018"
build = "build.rs"
default-run = "north"
license-file = "LICENSE.md"

[[bin]]
name = "north"

[lib]
name = "north"

[dependencies]
anyhow = "1.0.34"
async-trait = { version = "0.1.42", optional = true }
base64 = { version = "0.13.0", optional = true }
bitflags = { version = "1.2.1", optional = true }
byteorder = { version = "1.3.4", optional = true }
bytesize = { version = "1.0.1", optional = true }
derive-new = { version = "0.5.8", optional = true }
ed25519-dalek = { version = "1.0.1", optional = true }
floating-duration = { version = "0.1.2", optional = true }
itertools = { version = "0.9.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
libc = { version = "0.2.80", optional = true }
log = "0.4.11"
logd-logger = { git = "https://github.com/flxo/logd-logger.git" }
minijail = { path  = "../minijail/rust/minijail", optional = true }
nix = { version = "0.19.0", optional = true }
npk = { path = "../npk" }
proc-mounts = { version = "0.2.4", optional = true }
procinfo = { version = "0.4.2", optional = true }
regex = { version = "1.4.2", optional = true }
semver = { version = "0.11.0", optional = true }
serde = { version = "1.0.117", features = ["derive"], optional = true }
serde_json = { version = "1.0.59", optional = true }
serde_yaml = { version = "0.8.14", optional = true }
sha2 = { version = "0.9.2", optional = true }
structopt = { version = "0.3.20", optional = true }
structure = { version = "0.1.2", optional = true }
tempfile  = { version = "3.1.0", optional = true }
thiserror = { version = "1.0.22", optional = true }
tokio = { version = "0.3.4", features = ["full"], optional = true }
toml = { version = "0.5.7", optional = true }
url = { version = "2.2.0", optional = true }
uuid = { version = "0.8.1", features = [ "v4"], optional = true }

[dev-dependencies]
anyhow = "1.0.34"

[features]
default = ["api", "runtime", "manifest"]
api = ["manifest", "serde", "tokio", "derive-new", "uuid"]
manifest = ["lazy_static", "regex", "semver", "serde_yaml", "thiserror"]
runtime = [
    "api",
    "async-trait",
    "base64",
    "bitflags",
    "byteorder",
    "bytesize",
    "ed25519-dalek",
    "floating-duration",
    "itertools",
    "lazy_static",
    "libc",
    "minijail",
    "nix",
    "proc-mounts",
    "procinfo",
    "regex",
    "serde",
    "serde_json",
    "serde_yaml",
    "sha2",
    "structopt",
    "structure",
    "tempfile",
    "thiserror",
    "tokio",
    "toml",
    "url",
    "uuid",
]


[build-dependencies]
vergen = "3.1.0"
