[package]
name = "north_common"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.50"
serde_yaml = "0.8.11"

[dev-dependencies]
tempfile = "3.1.0"
