[package]
name = "north_common"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
semver = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"

[dev-dependencies]
tempfile = "3.1.0"
