[package]
name = "northstar-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
futures = "0.3.27"
northstar-runtime = { version = "^0.8.4-pre", path = "../northstar-runtime", features = ["api"] }
thiserror = "1.0.40"
tokio = "1.32.0"

