[package]
name = "northstar-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
futures = "0.3.29"
northstar-runtime = { version = "^0.9.3-pre", path = "../northstar-runtime", features = ["api"] }
thiserror = "1.0.61"
tokio = "1.32.0"

