[package]
name = "northstar-nstar"
version = "0.8.3"
authors = ["ESRLabs"]
description = "Northstar is an container runtime for Linux targetting embedded systems"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
base64 = "0.21.2"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.2"
futures = { version = "0.3.27", default-features = false }
humantime = "2.1.0"
itertools = "0.11.0"
northstar-client = { version = "^0.8.3", path = "../northstar-client" }
northstar-runtime = { version = "^0.8.3", path = "../northstar-runtime", features = ["seccomp"] }
pin-project-lite = "0.2.9"
prettytable-rs = "0.10.0"
regex = "1.7.3"
serde_json = "1.0.95"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "time"] }
tokio-util = "0.7.8"
url = "2.3.1"
