[package]
name = "northstar-nstar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
base64 = "0.21.5"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.2"
futures = { version = "0.3.29", default-features = false }
humantime = "2.1.0"
itertools = "0.12.0"
northstar-client = { version = "^0.9.2-pre", path = "../northstar-client" }
northstar-runtime = { version = "^0.9.2-pre", path = "../northstar-runtime", features = ["seccomp"] }
pin-project-lite = "0.2.9"
prettytable-rs = "0.10.0"
regex = "1.10.2"
serde_json = "1.0.108"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "time"] }
tokio-util = "0.7.10"
url = "2.5.0"
