[package]
name = "northstar-runtime"
version = "0.7.1-pre"
authors = ["ESRLabs"]
build = "build.rs"
description = "Northstar is an container runtime for Linux targetting embedded systems"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"
rust-version = "1.63.0"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-stream = { version = "0.3.3", optional = true }
async-trait = { version = "0.1.58", optional = true }
base64 = { version = "0.13.1", optional = true }
bincode = { version = "1.3.3", optional = true }
byteorder = { version = "1.4.3", optional = true }
bytes = { version = "1.2.1", optional = true }
bytesize = { version = "1.1.0", optional = true }
caps = { version = "0.5.5", optional = true }
cgroups-rs = { version = "0.3.0", features = ["serde"], optional = true }
devicemapper = { version = "0.32.2", optional = true }
ed25519-dalek = { version = "1.0.1", optional = true }
futures = { version = "0.3.24", default-features = true, optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", features = ["reset"], optional = true }
humanize-rs = { version = "0.1.5", optional = true }
humantime = { version = "2.1.0", optional = true }
humantime-serde = { version = "1.1.1", optional = true }
inotify = { version = "0.10.0", features = ["stream"], optional = true }
itertools = { version = "0.10.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.17", features = [ "serde", "max_level_trace", "release_max_level_debug"] }
loopdev = { version = "0.4.0", optional = true }
memchr = "2.5.0"
memfd = { version = "0.6.1", optional = true }
memoffset = { version = "0.8.0", optional = true }
nanoid = { version = "0.4.0", optional = true }
nix = { version = "0.26.1", default-features = false, features = ["fs", "sched", "mount", "term", "uio", "socket", "net", "signal", "user"], optional = true }
pkg-version = { version = "1.0.0", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
rlimit = { version = "0.9.0", optional = true }
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive", "rc"] }
serde_json = { version = "1.0.87", optional = true }
serde_plain = { version = "1.0.1", optional = true }
serde_with = { version = "2.2.0", optional = true }
serde_yaml = { version = "0.9.17", optional = true }
sha2 = { version = "0.10.6", optional = true }
strum = { version = "0.24.1", optional = true }
strum_macros = { version = "0.24.3", optional = true }
tempfile = { version = "3.3.0", optional = true }
thiserror = "1.0.37"
tokio = { version = "1.25.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time", "net"], optional = true }
tokio-eventfd = { version = "0.2.0", optional = true }
tokio-util = { version = "0.7.4", features = ["codec", "io"], optional = true }
toml = { version = "0.5.9", optional = true }
url = { version = "2.3.1", features = ["serde"], optional = true }
uuid = { version = "1.3.0", features = ["v4"], optional = true }
validator = { version = "0.16.0", features = ["derive"], optional = true }
zeroize = { version = "1.5.7", optional = true }
zip = { version = "0.6.4", default-features = false, optional = true }

[features]
api = [
    "bytes",
    "futures",
    "npk",
    "pkg-version",
    "serde_json",
    "tokio",
    "tokio-util",
]
npk = [
    "base64",
    "byteorder",
    "ed25519-dalek",
    "hex",
    "humanize-rs",
    "itertools",
    "pkg-version",
    "rand_core",
    "seccomp",
    "serde_json",
    "serde_plain",
    "serde_with",
    "serde_yaml",
    "sha2",
    "strum",
    "strum_macros",
    "tempfile",
    "toml",
    "uuid",
    "validator",
    "zeroize",
    "zip"
]
rexec = ["nix", "memfd"]
runtime = [
    "api",
    "async-stream",
    "async-trait",
    "bincode",
    "bytesize",
    "caps",
    "cgroups-rs",
    "devicemapper",
    "ed25519-dalek",
    "futures",
    "hex",
    "hmac",
    "humantime",
    "humantime-serde",
    "inotify",
    "itertools",
    "lazy_static",
    "loopdev",
    "memfd",
    "memoffset",
    "nanoid",
    "nix",
    "npk",
    "rlimit",
    "serde_plain",
    "tempfile",
    "tokio",
    "tokio-eventfd",
    "tokio-util",
    "url",
]
seccomp = [
    "bindgen",
    "caps",
    "lazy_static",
    "memoffset",
    "nix",
    "npk",
]

[dev-dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
memfd = "0.6.1"
proptest = "1.0.0"
serde_json = "1.0.87"
tokio = { version = "1.25.0", features = ["test-util"] }
tokio-test = "0.4.2"
toml = "0.5.9"

[build-dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
bindgen = { version = "0.59.2", default-features = false, features = ["runtime"], optional = true }

[package.metadata.docs.rs]
features = ["api", "npk", "runtime", "seccomp"]
