[package]
name = "northstar-schema"
version = "0.0.1-pre"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
northstar-runtime = { path = "../northstar-runtime", features = ["api"], default-features = false }
okapi = "0.7.0-rc.1"
schemars = "0.8.10"
serde_json = "1.0.81"
