[package]
name = "northstar-schema"
version = "0.5.0"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
northstar-runtime = { version = "^0.5.0", path = "../northstar-runtime", features = ["api"] }
okapi = "0.7.0-rc.1"
schemars = "0.8.10"
serde_json = "1.0.82"
