[package]
name = "northstar-seccomp"
version = "0.5.0"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/esrlabs/northstar"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
itertools = "0.10.3"
northstar-runtime = { version = "^0.5.0", path = "../northstar-runtime", features = ["seccomp"] }
regex = "1.6.0"
serde_yaml = "0.8.24"

[dev-dependencies]
assert_cmd = "2.0.4"
