[package]
name = "northstar-sextant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
northstar-runtime = { version = "^0.8.4-pre", path = "../northstar-runtime", features = ["npk"] }
tempfile = "3.5.0"
zip = { version = "0.6.6", default-features = false }
