[package]
name = "northstar-sextant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.2"
northstar-runtime = { version = "^0.9.2-pre", path = "../northstar-runtime", features = ["npk"] }
tempfile = "3.10.1"
zip = { version = "0.6.6", default-features = false }
