[package]
name = "northstar-sextant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
northstar-runtime = { version = "^0.9.3-pre", path = "../northstar-runtime", features = ["npk"] }
tempfile = "3.10.1"
zip = { version = "2.1.3", default-features = false }
