[package]
name = "northstar-stress"
version = "0.7.1-pre"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/esrlabs/northstar"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
futures = { version = "0.3.27", default-features = false }
humantime = "2.1.0"
itertools = "0.10.5"
log = "0.4.17"
northstar-client = { path = "../northstar-client" }
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-stream = { version = "0.1.12", features = ["time"] }
tokio-util = "0.7.7"
url = { version = "2.3.1", features = ["serde"] }
