[package]
name = "northstar-stress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
futures = { version = "0.3.27", default-features = false }
humantime = "2.1.0"
log = "0.4.19"
northstar-client = { path = "../northstar-client" }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-stream = { version = "0.1.14", features = ["time"] }
tokio-util = "0.7.8"
url = { version = "2.4.1", features = ["serde"] }
