[package]
name = "northstar-stress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
futures = { version = "0.3.29", default-features = false }
humantime = "2.1.0"
log = "0.4.22"
northstar-client = { path = "../northstar-client" }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-util = "0.7.10"
url = { version = "2.5.4", features = ["serde"] }
